[gd_scene load_steps=6 format=2]

[ext_resource path="res://Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://LoginScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="LogIn" type="VBoxContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="Title" type="RichTextLabel" parent="LogIn"]
margin_right = 860.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
custom_fonts/normal_font = SubResource( 1 )
text = "Log In"

[node name="Email" type="TextEdit" parent="LogIn"]
margin_top = 154.0
margin_right = 860.0
margin_bottom = 354.0
rect_min_size = Vector2( 0, 200 )
hint_tooltip = "Email Adress
"
custom_fonts/font = SubResource( 2 )
text = "Email"

[node name="Password" type="TextEdit" parent="LogIn"]
margin_top = 358.0
margin_right = 860.0
margin_bottom = 558.0
rect_min_size = Vector2( 0, 200 )
hint_tooltip = "Email Adress
"
custom_fonts/font = SubResource( 2 )
text = "Password
"

[node name="LogIn" type="Button" parent="LogIn"]
margin_top = 562.0
margin_right = 860.0
margin_bottom = 662.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
text = "Log In"

[node name="SignUp" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="Title" type="RichTextLabel" parent="SignUp"]
margin_right = 860.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/normal_font = SubResource( 1 )
text = "Sign Up"

[node name="Email" type="TextEdit" parent="SignUp"]
margin_top = 154.0
margin_right = 860.0
margin_bottom = 354.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/font = SubResource( 2 )
text = "Email"

[node name="Password" type="TextEdit" parent="SignUp"]
margin_top = 358.0
margin_right = 860.0
margin_bottom = 558.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/font = SubResource( 2 )
text = "Password"

[node name="PasswordVerified" type="TextEdit" parent="SignUp"]
margin_top = 562.0
margin_right = 860.0
margin_bottom = 762.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/font = SubResource( 2 )
text = "Repeat Password"

[node name="SignUp" type="Button" parent="SignUp"]
margin_top = 766.0
margin_right = 860.0
margin_bottom = 866.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 3 )
text = "Sign Up"

[node name="GoBack" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -96.0
margin_right = 242.0
text = "Go back"

[connection signal="pressed" from="LogIn/LogIn" to="." method="_on_login_pressed"]
[connection signal="pressed" from="SignUp/SignUp" to="." method="_on_register_pressed"]
[connection signal="pressed" from="GoBack" to="." method="_on_GoBack_pressed"]
